# OCRmyPDF-AzureAIDocumentIntelligence

./: README.md  pyproject.toml
.github/workflows/: test.yml
ocrmypdf_azureaidocumentintelligence/: __init__.py  _azureaidocumentintelligence.py  _pdf.py  py.typed
tests/: test_basic.py
